Crash on menu item drag #37511

Closed
opened 2013-11-18 09:45:03 +01:00 by Joerg Mueller · 8 comments
Member

System Information
Arch Linux

Blender Version
Broken: Blender 2.69

Exact steps for others to reproduce the error
Drag a checkable menu item, for example Timeline window -> Playback -> Audio Muted. When dragged up or down blender crashes.

**System Information** Arch Linux **Blender Version** Broken: Blender 2.69 **Exact steps for others to reproduce the error** Drag a checkable menu item, for example Timeline window -> Playback -> Audio Muted. When dragged up or down blender crashes.
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @neXyon

Added subscriber: @neXyon

Added subscriber: @AnthonyEdlin

Added subscriber: @AnthonyEdlin

Pretty clear it is part of the toggle drag code. It commonly crashes for me in some subfunction of ui_drag_toggle_set_xy_xy. It doesn't always crash though; sometimes it will check 2 checkboxes and close the menu without crashing, so I'm guessing that sometimes the region/blocks/buttons are there and sometimes they have been destroyed.

This code was added by Campbell so I'd assign to him.

Pretty clear it is part of the toggle drag code. It commonly crashes for me in some subfunction of ui_drag_toggle_set_xy_xy. It doesn't always crash though; sometimes it will check 2 checkboxes and close the menu without crashing, so I'm guessing that sometimes the region/blocks/buttons are there and sometimes they have been destroyed. This code was added by Campbell so I'd assign to him.
Campbell Barton was assigned by Anthony Edlin 2013-11-18 11:09:53 +01:00

This issue was referenced by blender/blender-addons-contrib@b6b4aabf04

This issue was referenced by blender/blender-addons-contrib@b6b4aabf041e34a76b79ff6cfad3fd739b3bb090

This issue was referenced by b6b4aabf04

This issue was referenced by b6b4aabf041e34a76b79ff6cfad3fd739b3bb090

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit b6b4aabf04.

Closed by commit b6b4aabf04.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37511
No description provided.