Fix T37511: toggle-drag feature was crashing with menu items.